# nova

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml  flake.nix
.github/: actionlint.yaml
.github/benchmark/zsh/: index.html
.github/scripts/: convert-zsh-bench.sh  extract-zsh-bench-baseline.sh  publish-zsh-bench-dashboard.sh  render-zsh-bench-comment.sh  upsert-pr-comment.sh
.github/workflows/: benchmark-pr.yml  benchmark.yml  ci.yml  release.yml
assets/vhs/: async-demo.toml  config.tape  readme-prompt.tape
bench/zsh/: data.js  index.html
benches/: render.rs
docs/: README.ja.md  aws-format.md  design.md  performance.md  requirements.md
docs/assets/vhs/: async-demo.toml  git-main-wrapper.sh  readme-prompt.tape
examples/: config.toml
scripts/: bench-zsh  preview-zsh-bench-dashboard
shell/: init.zsh
src/: cache.rs  lib.rs  main.rs  state.rs  zsh_init.rs
src/config/: error.rs  load.rs  mod.rs
src/render/: mod.rs  width.rs  zsh.rs
src/segments/: dir.rs  duration.rs  exit_status.rs  git.rs  mod.rs  prompt_char.rs  runtime.rs  ssh.rs  time.rs  user_host.rs
src/segments/runtime/: aws.rs  bun.rs  deno.rs  detect.rs  mod.rs  nix_shell.rs  node.rs  python.rs  rust.rs
src/shell/: init.zsh
src/worker/: jobs.rs  mod.rs  protocol.rs
tests/: cli.rs  manifest.rs  worker.rs  zsh_e2e.zsh
