[package]
name = "nova"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A fast, customizable zsh prompt renderer."
repository = "https://github.com/lemtoc/nova"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
unicode-width = "0.2"
wait-timeout = "0.2"

[dev-dependencies]
assert_cmd = "2"
insta = "1"
predicates = "3"
proptest = "1"
tempfile = "3"

[[bench]]
name = "render"
harness = false
